# machine-learning-students-dropout

./: .gitignore  README.md  pyproject.toml
notebooks/: classificacao.ipynb
