[tool.poetry]
name = "venv"
version = "0.1.0"
description = ""
authors = ["ledsouza <leandro.souza.159@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
plotly = "^5.22.0"
scikit-learn = "^1.4.2"
imbalanced-learn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
